<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="net.mosajon.idcardcopy.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/mImageView01"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/home_context1"
        app:srcCompat="@drawable/surea" />

    <ImageView
        android:id="@+id/mImageView02"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:contentDescription="@string/home_context2"
        app:srcCompat="@drawable/sureb" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="440dp"
        android:text="@string/home_button" />

</FrameLayout>
